--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,27 @@
-*{
-	box-sizing: border-box;
+* {
+    box-sizing: border-box;
 }
 
 body {
     background: linear-gradient(90deg, #00d2ff 0%, #3a47d5 100%);
-	font: 500 16px/22px "Roboto", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-weight: 700;
+    font: 500 16px/22px "Roboto", "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+    font-weight: 700;
 }
 
 input {
-	padding: .6em 1.4em .5em .8em;
+    padding: .6em 1.4em .5em .8em;
     line-height: 1.3;
     border-radius: .5em;
     border: 1px solid #aaa;
     font-weight: 700;
-    box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
+    box-shadow: 0 1px 0 1px rgba(0, 0, 0, .04);
     color: #444;
     font-size: 16px;
     outline: none;
 
 }
 
-input:focus{
+input:focus {
     border-color: #aaa;
     box-shadow: 0 0 1px 3px rgba(59, 153, 252, .7);
     box-shadow: 0 0 0 3px -moz-mac-focusring;
@@ -30,41 +30,39 @@ input:focus{
 }
 
 #container {
-	
-	margin: 15% auto;
-	width: 50%;
-    background: #C9D6FF;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #E2E2E2, #C9D6FF);  /* Chrome 10-25, Safari 5.1-6 */
+
+    margin: 15% auto;
+    width: 50%;
+    background: #C9D6FF; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #E2E2E2, #C9D6FF); /* Chrome 10-25, Safari 5.1-6 */
     background: linear-gradient(to right, #E2E2E2, #C9D6FF); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     display: flex;
-	padding: 20px;
-	border-radius: 5px;
-	justify-content: center;
-
+    padding: 20px;
+    border-radius: 5px;
+    justify-content: center;
 
 }
 
 .btn {
-  border-radius: .5em;
-  background-color: #0074d9;
-  color: #fff;
-  cursor: pointer;
-  display: inline-block;
-  font-weight: 700;
-  letter-spacing: .5px;
-  font-size: 16px;
-  text-transform: uppercase;
-  
-  padding: .6em 1.4em .5em .8em;
-  line-height: 1.3;
+    border-radius: .5em;
+    background-color: #0074d9;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    font-weight: 700;
+    letter-spacing: .5px;
+    font-size: 16px;
+    text-transform: uppercase;
+    padding: .6em 1.4em .5em .8em;
+    line-height: 1.3;
 
 }
 
 .btn, input, select {
-	display: block;
-	margin: 10px 0 10px 0;
-	width: 100%;
-    max-width: 100%; 
+    display: block;
+    margin: 10px 0 10px 0;
+    width: 100%;
+    max-width: 100%;
 
 }
 
@@ -76,31 +74,34 @@ input:focus{
     color: #444;
     line-height: 1.3;
     padding: .6em 1.4em .5em .8em;
-   
+
     border: 1px solid #aaa;
-    box-shadow: 0 1px 0 1px rgba(0,0,0,.04);
+    box-shadow: 0 1px 0 1px rgba(0, 0, 0, .04);
     border-radius: .5em;
     -moz-appearance: none;
     -webkit-appearance: none;
     appearance: none;
     background-color: #fff;
     background-image: url('data:image/svg+xml;charset=US-ASCII,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22292.4%22%20height%3D%22292.4%22%3E%3Cpath%20fill%3D%22%23007CB2%22%20d%3D%22M287%2069.4a17.6%2017.6%200%200%200-13-5.4H18.4c-5%200-9.3%201.8-12.9%205.4A17.6%2017.6%200%200%200%200%2082.2c0%205%201.8%209.3%205.4%2012.9l128%20127.9c3.6%203.6%207.8%205.4%2012.8%205.4s9.2-1.8%2012.8-5.4L287%2095c3.5-3.5%205.4-7.8%205.4-12.8%200-5-1.9-9.2-5.5-12.8z%22%2F%3E%3C%2Fsvg%3E'),
-      linear-gradient(to bottom, #ffffff 0%,#e5e5e5 100%);
+    linear-gradient(to bottom, #ffffff 0%, #e5e5e5 100%);
     background-repeat: no-repeat, repeat;
     background-position: right .7em top 50%, 0 0;
     background-size: .65em auto, 100%;
 }
+
 .select-css::-ms-expand {
     display: none;
 }
+
 .select-css:hover {
     border-color: #888;
 }
+
 .select-css:focus {
     border-color: #aaa;
     box-shadow: 0 0 1px 3px rgba(59, 153, 252, .7);
     box-shadow: 0 0 0 3px -moz-mac-focusring;
-    color: #222; 
+    color: #222;
     outline: none;
 }
 
@@ -168,7 +169,7 @@ input:focus{
 }
 
 input[type="required"]:after {
-    content:" *";
+    content: " *";
     color: red;
 }
 
