--- a/form_handling.css
+++ b/form_handling.css
@@ -26,22 +26,17 @@ a.navigate{
 }
 /* unvisited link */
 a.navigate:link {
-    color: red;
+    color: white;
 }
 
 /* visited link */
 a.navigate:visited {
-    color: green;
-}
-
-/* mouse over link */
-a.navigate:hover {
-    color: peru;
+    color: white;
 }
 
 /* selected link */
 a.navigate:active {
-    color: blue;
+    color: white;
 }
 
 /* Style buttons */
@@ -57,11 +52,28 @@ a.navigate:active {
 }
 
 /* Darker background on mouse-over */
-.btn:hover {
+ .btn:hover {
     background-color: RoyalBlue;
 }
 
 .btn a {
     text-decoration: none;
     color:white;
+}
+
+.back-btn {
+    border-radius: .3em;
+    background-color: DodgerBlue;
+    color: #fff;
+    cursor: pointer;
+    display: inline-block;
+    font-weight: 700;
+    letter-spacing: .5px;
+    font-size: 16px;
+    padding: .5em 1.0em .5em .7em;
+    line-height: 1.3;
+}
+
+.back-btn:hover {
+    background-color: RoyalBlue;
 }
